--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,8 +5,8 @@ import WorkItemPreview from '../components/WorkItemPreview.astro';
 import ProfileHeader from '../components/ProfileHeader.astro';
 
 const seo = {
-  title: 'Pro File | Template by Little Sticks',
-  description: 'Page Description',
+  title: 'Matthiesen Photography | Adam Matthiesen & Alox Leyva',
+  description: 'We both have a love for Photography which let to us creating our website to share our work, and offer our services to anyone interested! We do all sorts of different type of Photography!',
 };
 
 const work = await Astro.glob('./work/*.{md,mdx}');
