Update With Content and Fixed all fake text

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -28,7 +28,7 @@ import LittleSticksPlug from "./LittleSticksPlug.astro";
   <footer>
     <!-- You can delete this code or disable it with option in settings.ts -->
     {settings.showLittleSticksPlug && <LittleSticksPlug />}
-    <SocialList/>
+    <!--SocialList/-->
     <div class="footer-bottom__container ">
       <p>&copy; {new Date().getFullYear()} {settings.name}</p>
     </div>
