--- a/src/components/ProfileHeader.astro
+++ b/src/components/ProfileHeader.astro
@@ -40,8 +40,8 @@ import Button from './Button.astro';
       <p><em>{profile.title}</em></p>
       <p class="profile__bio">{profile.bio}</p>
       <div class="home-profile__btns">
-        <Button href="/contact">Contact Me</Button>
-        <Button href="/about  " outlined>About Me</Button>
+        <Button href="/contact">Contact Us</Button>
+        <Button href="/about  " outlined>About Us</Button>
       </div>
     </div>
   </header>
