--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -6,8 +6,8 @@ import ContactForm from '../components/ContactForm.astro';
 
 <Layout>
   <Container narrow topPadding bottomPadding>
-    <h1>Contact Me</h1>
-    <p>Use the form below to contact me and I will get back to you as soon as possible.</p>
+    <h1>Contact Us</h1>
+    <p>Use the form below to contact Us and we will get back to you as soon as possible!</p>
     <ContactForm />
   </Container>
 </Layout>
