fixed spelling issue

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,7 +6,7 @@ import ProfileHeader from '../components/ProfileHeader.astro';
 
 const seo = {
   title: 'Matthiesen Photography | Adam Matthiesen & Alox Leyva',
-  description: 'We both have a love for Photography which let to us creating our website to share our work, and offer our services to anyone interested! We do all sorts of different type of Photography!',
+  description: 'We both have a love for Photography which led to us creating our website to share our work, and offer our services to anyone interested! We do all sorts of different type of Photography!',
 };
 
 const work = await Astro.glob('./work/*.{md,mdx}');
