--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -8,7 +8,7 @@ import Layout from '../layouts/Page.astro';
   <Container bottomPadding topPadding narrow flow>
     <ProfilePhoto/>
     <h1>About Us</h1>
-    <p>We both have a love for Photography which let to us creating our website to share our work, 
+    <p>We both have a love for Photography which led to us creating our website to share our work, 
       and offer our services to anyone interested! We do all sorts of different type of Photography!</p>
   </Container>
 </Layout>
