--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -9,6 +9,11 @@ import Layout from '../layouts/Page.astro';
     <ProfilePhoto/>
     <h1>About Us</h1>
     <p>We both have a love for Photography which led to us creating our website to share our work, 
-      and offer our services to anyone interested! We do all sorts of different type of Photography!</p>
+      and offer our services to anyone interested! We do all sorts of different type of Photography! 
+      But we also have other projects outside of photography, check us out below!</p>
+    <br>
+    <h3>More about Adam,</h3>
+    <p>Check out, <a href="https://matthiesen.xyz">Matthiesen.XYZ</a></p>
+    
   </Container>
 </Layout>
