--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -7,7 +7,9 @@ import ContactForm from '../components/ContactForm.astro';
 <Layout>
   <Container narrow topPadding bottomPadding>
     <h1>Contact Us</h1>
-    <p>Use the form below to contact Us and we will get back to you as soon as possible!</p>
-    <ContactForm />
+    <p>Please Send us a email, at <a href="mailto:contact@matthiesenphotography.com">Contact@MatthiesenPhotography.com</a></Container></p>
+    <br>
+    <br>
+    <p>Notice: Renturned emails will come from <a href="https://matthiesen.xyz">@Matthiesen.XYZ</a> domain instead of our normal domain!</p>
   </Container>
 </Layout>
